Fixing incorrect media queries which caused horizontal scroll

--- a/cheeky.development.css
+++ b/cheeky.development.css
@@ -235,7 +235,7 @@ textarea {
 .offset-15 {
   margin-left: 1050px; }
 
-@media (max-width: 480px) {
+@media (max-width: 630px) {
   .container {
     width: auto; }
 
@@ -246,7 +246,7 @@ textarea {
       float: none;
       margin: 0;
       width: auto; } }
-@media (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 630px) and (max-width: 790px) {
   .container {
     width: 630px; }
 
@@ -345,7 +345,7 @@ textarea {
 
   .offset-15 {
     margin-left: 600px; } }
-@media (min-width: 768px) and (max-width: 980px) {
+@media (min-width: 790px) and (max-width: 1100px) {
   .container {
     width: 790px; }
 
@@ -444,3 +444,6 @@ textarea {
 
   .offset-15 {
     margin-left: 750px; } }
+/*
+  Grids 480 -- 630 -- 790 -- 1100
+*/
