--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -9,7 +9,7 @@
 //-- Stacked columns
 //---------------------
 
-@media (max-width: 480px) {
+@media (max-width: 630px) {
 
 .container {
   width: auto;
@@ -38,7 +38,7 @@
 //-- 630px grid
 //---------------------
 
-@media (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 630px) and (max-width: 790px) {
 
 .container {
   width: $tiny-container-width;
@@ -74,7 +74,7 @@
 //-- 940px grid
 //---------------------
 
-@media (min-width: 768px) and (max-width: 980px) {
+@media (min-width: 790px) and (max-width: 1100px) {
 
 .container {
   width: $small-container-width;
